--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://js.stripe.com">
   <link rel="icon" href="/icon/logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chrome Extensioin + React + TS + Vite App - Popup</title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" style="min-height: 90px;"></div>
   <script type="module" src="/src/popup/index.tsx"></script>
+  <!-- <script async src="https://js.stripe.com/v3/pricing-table.js"></script> -->
   <!-- <a href="/pages/page.html">LINK TO PAGE.html</a> -->
 </body>
 
